tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.stderr
error[E0275]: overflow evaluating the requirement `Send<i32, Send<i32, Recv<Test4, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:72:12
   |
72 |     Branch(Send<i32, Send<i32, Recv<Test4, End>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `Test4`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:70:6
   |
70 | enum Test4 {
   |      ^^^^^
note: required for `Recv<Test4, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:45:35
   |
45 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `Send<i32, Recv<i32, Recv<Test6, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:80:12
   |
80 |     Branch(Send<i32, Recv<i32, Recv<Test6, End>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `Test6`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:78:6
   |
78 | enum Test6 {
   |      ^^^^^
note: required for `Recv<Test6, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_double_trouble_with_test_struct.rs:45:35
   |
45 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
